feat: Refactor exception handling and improve code quality
- Added missing newlines at the end of several files to comply with PEP 8.
- Cleaned up whitespace in exception classes for better readability.
- Updated model files to improve import order and consistency.
- Enhanced logging setup in the logger utility.
- Improved parsing logic in the WeiboParser class.
- Created comprehensive development documentation including setup, testing, and CI/CD guidelines.
- Added pytest configuration for better test organization and execution.
- Implemented unit and integration tests for WeiboClient and data models.
- Updated pyproject.toml and uv.lock for dependency management.

--- a/.gitignore
+++ b/.gitignore
@@ -155,3 +155,11 @@ cache/
 .cache/
 cookies/
 screenshots/
+docs/CI-CD.md
+
+# Security reports
+bandit-report.json
+safety-report.json
+
+# Coverage reports
+cover/
