--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,10 +10,10 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9, "3.10", "3.11"]
+        python-version: [3.8, 3.9, "3.10", "3.11"]
 
     steps:
     - uses: actions/checkout@v4
@@ -30,18 +30,10 @@ jobs:
       run: |
         uv sync --dev
 
-    - name: Lint with flake8
+    - name: Lint and format with ruff
       run: |
-        uv run flake8 crawl4weibo --count --select=E9,F63,F7,F82 --show-source --statistics
-        uv run flake8 crawl4weibo --count --exit-zero --max-complexity=10 --max-line-length=88 --statistics
-
-    - name: Check code formatting with black
-      run: |
-        uv run black --check crawl4weibo
-
-    - name: Check import sorting with isort
-      run: |
-        uv run isort --check-only crawl4weibo
+        uv run ruff check crawl4weibo
+        uv run ruff format crawl4weibo --check
 
     - name: Run tests with pytest
       run: |
@@ -56,7 +48,7 @@ jobs:
 
   build:
     needs: test
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v4
 
@@ -77,7 +69,7 @@ jobs:
         uv tool run twine check dist/*
 
     - name: Upload build artifacts
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: dist
         path: dist/
@@ -95,7 +87,7 @@ jobs:
         python-version: "3.10"
 
     - name: Download build artifacts
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: dist
         path: dist/
