--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   code-quality:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     
     steps:
     - uses: actions/checkout@v4
@@ -25,30 +25,23 @@ jobs:
       run: |
         uv sync --dev
 
-    - name: Run flake8
+    - name: Lint and format with ruff
       run: |
-        uv run flake8 crawl4weibo --count --statistics --format=github
-
-    - name: Run black check
-      run: |
-        uv run black --check --diff crawl4weibo
-
-    - name: Run isort check
-      run: |
-        uv run isort --check-only --diff crawl4weibo
+        uv run ruff check crawl4weibo --output-format=github
+        uv run ruff format crawl4weibo --check --diff
 
     - name: Security check with bandit
       run: |
         uv tool run bandit -r crawl4weibo -f json -o bandit-report.json || true
 
     - name: Upload bandit report
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: bandit-report
         path: bandit-report.json
 
   dependency-check:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     
     steps:
     - uses: actions/checkout@v4
@@ -66,7 +59,7 @@ jobs:
         uv tool run safety check --json --output safety-report.json || true
 
     - name: Upload safety report
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: safety-report
         path: safety-report.json
