feat: Add search_posts_by_count method for keyword-based post retrieval (#20)
* feat: Add search_posts_by_count method for keyword-based post retrieval

* fix: Update Codecov action to v5 and correct configuration for coverage upload

* feat: Add initial Codecov configuration for coverage reporting

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,11 +40,11 @@ jobs:
         uv run pytest tests/ --cov=crawl4weibo --cov-report=xml --cov-report=term-missing
 
     - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v5
       with:
-        file: ./coverage.xml
-        flags: unittests
+        files: ./coverage.xml
         name: codecov-umbrella
+        token: ${{ secrets.CODECOV_TOKEN }}
 
   build:
     needs: test
