--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,10 @@ jobs:
       run: |
         uv sync --dev
 
+    - name: Install Playwright browsers
+      run: |
+        uv run playwright install --with-deps chromium
+
     - name: Lint and format with ruff
       run: |
         uv run ruff check crawl4weibo
