--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "lxml>=4.6.0",
     "tqdm>=4.60.0",
     "python-dateutil>=2.8.0",
+    "playwright>=1.48.0",
 ]
 dynamic = ["version"]
 
